rework deprecated warning on newInstance()